--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 
 <nav role="navigation" aria-label="Main Navigation">
     <a href="index.html">Home</a>
-    <a href="SDG13.HTML">SDG 13 Targets</a>
-    <a href="imple2.HTML">Implementation</a>
+    <a href="sdg13.html">SDG 13 Targets</a>
+    <a href="imple2.html">Implementation</a>
     <!-- <a href="#carbon-section">Calculate</a> -->
-    <a href="feedback.HTML">Feedback</a>
+    <a href="feedback.html">Feedback</a>
 
     <button id="openPopupBtn">Register</button>
 </nav>
