--- a/imple2.html
+++ b/imple2.html
@@ -236,7 +236,7 @@
 </header>
 
 <nav>
-    <a href="Index.HTML">Home</a>
+    <a href="imple2.html">Home</a>
     <a href="sdg13.html">SDG 13 Goals </a>
     <a href="imple2.html">Implementation </a>
 </nav>
